k8s/43-grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: forum
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
  type: ClusterIP
